ganti logo bagian pojok atas kiri dan bawah

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<title>Baibai</title>
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="img/fav.png">
+	<link rel="shortcut icon" href="img/logo2.png">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -34,7 +34,7 @@
 		<div class="overlay"></div>
 		<nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
 			<div class="container">
-				<a href="index.html" class="navbar-brand"><img src="img/logo.png" alt=""></a>
+				<a href="index.html" class="navbar-brand"><img src="img/baibai.png" alt=""></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 					<i class="lni-menu"></i>
@@ -119,6 +119,7 @@
 					bagi seluruh pengguna dalam menggunakan koinnya kami hadir dengan berbagai macam fitur untuk memudahkan
 					keperluan pengguna</h2>
 			</div>
+
 			<div class="row">
 				<div class="col-lg-4 col-md-12 col-xs-12">
 					<div class="content-left text-right">
@@ -131,20 +132,24 @@
 								<p>Udah gak zaman bawa koin balik, cukup simpan koinmu secara langsung melalui kasir tempat belanja</p>
 							</div>
 						</div>
+
 						<div class="box-item left">
 							<span class="icon">
 								<i class="lni-wallet"></i>
 							</span>
+
 							<div class="text">
 								<h4>Pembayaran</h4>
 								<p>Gak ada lagi yang namanya malu belanjain uang koin, dengan baibai kini kamu lebih modern dalam
 									melakukan berbagai pembayaran</p>
 							</div>
 						</div>
+
 						<div class="box-item left">
 							<span class="icon">
 								<i class="lni-investment"></i>
 							</span>
+
 							<div class="text">
 								<h4>Transfer</h4>
 								<p>Gunakan fitur transfer untuk saling berbagi saldo koinmu</p>
@@ -152,17 +157,20 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="col-lg-4 col-md-12 col-xs-12">
 					<div class="show-box">
 						<img src="img/features/app.png" alt="">
 					</div>
 				</div>
+
 				<div class="col-lg-4 col-md-12 col-xs-12">
 					<div class="content-right text-left">
 						<div class="box-item right">
 							<span class="icon">
 								<i class="lni-target-revenue"></i>
 							</span>
+
 							<div class="text">
 								<h4>Tarik Tunai</h4>
 								<p>Jadikan uang koinmu menjadi uang kertas dengan tarik tunai di seluruh gerai toko mitra</p>
@@ -797,7 +805,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-						<img src="img/logo.png" alt="">
+						<img src="img/baibai.png" alt="">
 						<div class="textwidget">
 							<p>Baibai adalah sebuah platform yang memungkinkan setiap orang bisa menyimpan uang koin kembalian belanja
 								secara langsung melalui kasir tempat belanja</p>
