tambah font awesome, ganti dan tambah deskripsi keunggulan, ganti foto team

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	<title>Baibai</title>
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="img/logo2.png">
+	<link rel="shortcut icon" href="img/favicon.png">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/all.min.css">
 	<link rel="stylesheet" href="css/line-icons.css">
 	<link rel="stylesheet" href="css/LineIcons.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
@@ -125,7 +126,7 @@
 					<div class="content-left text-right">
 						<div class="box-item left">
 							<span class="icon">
-								<i class="lni-coin"></i>
+								<i style="color:white" class="fas fa-coins"></i>
 							</span>
 							<div class="text">
 								<h4>Simpan Koin</h4>
@@ -135,7 +136,7 @@
 
 						<div class="box-item left">
 							<span class="icon">
-								<i class="lni-wallet"></i>
+								<i style="color: white;" class="fas fa-wallet"></i>
 							</span>
 
 							<div class="text">
@@ -147,7 +148,7 @@
 
 						<div class="box-item left">
 							<span class="icon">
-								<i class="lni-investment"></i>
+								<i style="color: white;" class="far fa-handshake"></i>
 							</span>
 
 							<div class="text">
@@ -168,22 +169,22 @@
 					<div class="content-right text-left">
 						<div class="box-item right">
 							<span class="icon">
-								<i class="lni-target-revenue"></i>
+								<i style="color: white;" class="fas fa-money-bill-wave"></i>
 							</span>
 
 							<div class="text">
 								<h4>Tarik Tunai</h4>
-								<p>Jadikan uang koinmu menjadi uang kertas dengan tarik tunai di seluruh gerai toko mitra</p>
+								<p>Jadikan Uang Koinmu Menjadi Uang Kertas Dengan Tarik Tunai Di Seluruh Gerai Toko Mitra</p>
 							</div>
 						</div>
 						<div class="box-item right">
 							<span class="icon">
-								<i class="lni-customer"></i>
+								<i style="color: white;" class="fas fa-hand-holding-usd"></i>
 							</span>
 							<div class="text">
 								<h4>Donasi</h4>
-								<p>Beberapa koinmu kamu bisa memberikannya kepada siapa saja yang membutuhkan, kapan saja dan dimana
-									saja</p>
+								<p>Beberapa Koinmu Kamu Bisa Memberikannya Kepada Siapa Saja Yang Membutuhkan, Kapan Saja Dan Dimana
+									Saja</p>
 							</div>
 						</div>
 						<!-- <div class="box-item right">
@@ -264,10 +265,24 @@
 		</div>
 	</div> -->
 
-	<!-- Features Section End -->
+	<!-- Start Pricing Table Section -->
+	<div id="screenshots" class="section pricing-section">
+		<div class="container">
+			<div class="section-header">
+				<p class="btn btn-subtitle wow fadeInDown" data-wow-delay="0.2s">Keunggulan</p>
+				<h2 class="section-title">Keunggulan Baibai</h2>
+			</div>
+			<p class="text-center mb-3">Lebih Simple dan Mudah <br>Bisa Diakses dan Digunakan Dimana Saja Kapan Saja
+				Bebas Biaya Topup</p>
+		</div>
+	</div>
+	</div>
+	<!-- End Pricing Table Section -->
 
+	<!-- Features Section End -->
+	<!-- SEMENTARA FITUR INI TIDAK DIPAKAI -->
 	<!-- Awesome Screens Section Start -->
-	<section id="screenshots" class="screens-shot section">
+	<!-- <section id="screenshots" class="screens-shot section">
 		<div class="container">
 			<div class="section-header">
 				<p class="btn btn-subtitle wow fadeInDown" data-wow-delay="0.2s">Keunggulan</p>
@@ -308,7 +323,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- Awesome Screens Section End -->
 
 	<!-- Team section Start -->
@@ -324,7 +339,7 @@
 					<div class="single-team wow fadeInUp" data-wow-delay="0.2s">
 
 						<div class="team-thumb">
-							<img src="img/team/team1.jpg" alt="">
+							<img src="img/team/mardiyanto.jpg" alt="">
 							<ul class="social-list">
 								<li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
 								<li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
@@ -348,9 +363,35 @@
 				</div>
 
 				<div class="col-lg-3 col-md-6 col-xs-12">
+					<div class="single-team wow fadeInUp" data-wow-delay="0.2s">
+
+						<div class="team-thumb">
+							<img src="img/team/sarpandi.jpg" alt="">
+							<ul class="social-list">
+								<li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
+								<li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
+								<li class="google-plus"><a href="#"><i class="lni-google-plus"></i></a></li>
+								<li class="linkedin"><a href="#"><i class="lni-linkedin-fill"></i></a></li>
+							</ul>
+						</div>
+
+						<div class="team-details">
+							<div class="team-inner">
+								<h4 class="team-title text-center">Sarpandi</h4>
+								<p class="team-title text-center mb-2">
+									<bold>Chief Technology Office</bold>
+								</p>
+								<p class="text-center">Programmer, latar belakang pendidikan sistem informasi, berpengalaman dan
+									berprofesi dalam pembuatan startup digital khususnya perangkat aplikasi dan website</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-3 col-md-6 col-xs-12">
 					<div class="single-team wow fadeInUp" data-wow-delay="0.3s">
 						<div class="team-thumb">
-							<img src="img/team/team2.jpg" alt="">
+							<img src="img/team/abyadh.jpg" alt="">
 							<ul class="social-list">
 								<li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
 								<li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
@@ -360,7 +401,7 @@
 						</div>
 						<div class="team-details">
 							<div class="team-inner">
-								<h4 class="team-title text-center">Julius</h4>
+								<h4 class="team-title text-center">Abyadh</h4>
 								<p class="team-title text-center mb-2">
 									<bold>Chief Technology Officer</bold>
 								</p>
@@ -373,7 +414,7 @@
 				<div class="col-lg-3 col-md-6 col-xs-12">
 					<div class="single-team wow fadeInUp" data-wow-delay="0.4s">
 						<div class="team-thumb">
-							<img src="img/team/team3.jpg" alt="">
+							<img src="img/team/fajar.jpg" alt="">
 							<ul class="social-list">
 								<li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
 								<li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
@@ -396,7 +437,7 @@
 				<div class="col-lg-3 col-md-6 col-xs-12">
 					<div class="single-team wow fadeInUp" data-wow-delay="0.5s">
 						<div class="team-thumb">
-							<img src="img/team/team4.jpg" alt="">
+							<img src="img/team/rahma.jpg" alt="">
 							<ul class="social-list">
 								<li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
 								<li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
@@ -855,11 +896,11 @@
 							</div>
 							<div class="float-right">
 								<ul class="footer-social">
-									<li><a class="facebook" href="#"><i class="lni-facebook-original"></i></a></li>
-									<li><a class="twitter" href="#"><i class="lni-twitter-original"></i></a></li>
-									<li><a class="linkedin" href="#"><i class="lni-linkedin-original"></i></a></li>
-									<li><a class="linkedin" href="#"><i class="lni-instagram-original"></i></a></li>
-									<li><a class="google-plus" href="#"><i class="lni-google-plus"></i></a></li>
+									<li><a class="facebook"><i class="lni-facebook-original"></i></a></li>
+									<li><a class="twitter"><i class="lni-twitter-original"></i></a></li>
+									<li><a class="linkedin"><i class="lni-linkedin-original"></i></a></li>
+									<li><a class="linkedin"><i class="lni-instagram-original"></i></a></li>
+									<li><a class="google-plus"><i class="lni-google-plus"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -900,6 +941,7 @@
 	<script src="js/waypoints.min.js"></script>
 	<script src="js/form-validator.min.js"></script>
 	<script src="js/contact-form-script.js"></script>
+	<script src="js/all.min.js"></script>
 	<script src="js/main.js"></script>
 
 </body>
