edit deskripsi team dan tambah icon di section keunggulan

--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@
 			<div class="section-header">
 				<p class="btn btn-subtitle wow fadeInDown" data-wow-delay="0.2s">Keunggulan</p>
 				<h2 class="section-title">Keunggulan Baibai</h2>
+				<img style="height: 250px;" src="img/rewards.svg">
 			</div>
 			<p class="text-center mb-3">Lebih Simple dan Mudah <br>Bisa Diakses dan Digunakan Dimana Saja Kapan Saja
 				Bebas Biaya Topup</p>
@@ -379,7 +380,7 @@
 							<div class="team-inner">
 								<h4 class="team-title text-center">Sarpandi</h4>
 								<p class="team-title text-center mb-2">
-									<bold>Chief Technology Office</bold>
+									<bold>Chief Technology</bold>
 								</p>
 								<p class="text-center">Programmer, latar belakang pendidikan sistem informasi, berpengalaman dan
 									berprofesi dalam pembuatan startup digital khususnya perangkat aplikasi dan website</p>
@@ -403,7 +404,7 @@
 							<div class="team-inner">
 								<h4 class="team-title text-center">Abyadh</h4>
 								<p class="team-title text-center mb-2">
-									<bold>Chief Technology Officer</bold>
+									<bold>Team Technology</bold>
 								</p>
 								<p class="text-center">Programmer, latar belakang pendidikan sistem informasi, berpengalaman dan
 									berprofesi dalam pembuatan startup digital khususnya perangkat aplikasi dan website</p>
@@ -426,7 +427,7 @@
 							<div class="team-inner">
 								<h4 class="team-title text-center">Muhammad Fajar Prawira</h4>
 								<p class="team-title text-center mb-2">
-									<bold>Chief Technology Officer</bold>
+									<bold>Team Technology</bold>
 								</p>
 								<p class="text-center">Programmer, latar belakang pendidikan sistem informasi, berpengalaman dan
 									berprofesi dalam pembuatan startup digital khususnya perangkat aplikasi dan website</p>
@@ -449,7 +450,7 @@
 							<div class="team-inner">
 								<h4 class="team-title text-center">Rahma Meylani E.</h4>
 								<p class="team-title text-center mb-2">
-									<bold>Chief Technology Officer</bold>
+									<bold>Chief Financial</bold>
 								</p>
 								<p class="text-center">Programmer, latar belakang pendidikan sistem informasi, berpengalaman dan
 									berprofesi dalam pembuatan startup digital khususnya perangkat aplikasi dan website</p>
