ganti foto dan ubah deskripsi

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 				<div class="col-lg-3 col-md-6 col-xs-12">
 					<div class="single-team wow fadeInUp" data-wow-delay="0.4s">
 						<div class="team-thumb">
-							<img src="img/team/fajar.jpg" alt="">
+							<img style="height: 255px;" src="img/team/fajar.jpg" alt="">
 							<ul class="social-list">
 								<li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
 								<li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
@@ -425,12 +425,12 @@
 						</div>
 						<div class="team-details">
 							<div class="team-inner">
-								<h4 class="team-title text-center">Muhammad Fajar Prawira</h4>
+								<h4 class="team-title text-center">M Fajar Prawira</h4>
 								<p class="team-title text-center mb-2">
 									<bold>Team Technology</bold>
 								</p>
-								<p class="text-center">Programmer, latar belakang pendidikan sistem informasi, berpengalaman dan
-									berprofesi dalam pembuatan startup digital khususnya perangkat aplikasi dan website</p>
+								<p class="text-center">Sekilas tentang saya, latar belakang pendidikan sistem informasi, berpengalaman
+									dan berprofesi dalam pembuatan startup digital khususnya dalam bidang web programming</p>
 							</div>
 						</div>
 					</div>
