--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="overlay"></div>
 		<nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
 			<div class="container">
-				<a href="index.html" class="navbar-brand"><img src="img/baibai.png" alt=""></a>
+				<a href="index.html" class="navbar-brand"><img src="img/coba.png" alt=""></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 					<i class="lni-menu"></i>
@@ -273,7 +273,7 @@
 				<h2 class="section-title">Keunggulan Baibai</h2>
 				<img style="height: 250px;" src="img/rewards.svg">
 			</div>
-			<p class="text-center mb-3">Lebih Simple dan Mudah <br>Bisa Diakses dan Digunakan Dimana Saja Kapan Saja
+			<p class="text-center">Lebih Simple dan Mudah <br>Bisa Diakses dan Digunakan Dimana Saja Kapan Saja
 				Bebas Biaya Topup</p>
 		</div>
 	</div>
@@ -847,7 +847,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-						<img src="img/baibai.png" alt="">
+						<img src="img/coba.png">
 						<div class="textwidget">
 							<p>Baibai adalah sebuah platform yang memungkinkan setiap orang bisa menyimpan uang koin kembalian belanja
 								secara langsung melalui kasir tempat belanja</p>
