--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
 				<div class="row">
 					<div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
 						<img src="img/coba.png">
-						<div class="textwidget">
+						<div class="textwidget mt-2">
 							<p>Baibai adalah sebuah platform yang memungkinkan setiap orang bisa menyimpan uang koin kembalian belanja
 								secara langsung melalui kasir tempat belanja</p>
 						</div>
