ganti image clint, dan ganti warna responsive menu navbar

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="overlay"></div>
 		<nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar">
 			<div class="container">
-				<a href="index.html" class="navbar-brand"><img src="img/coba.png" alt=""></a>
+				<a href="index.html" class="navbar-brand mt-2"><img src="img/coba.png" alt=""></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
 					aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 					<i class="lni-menu"></i>
@@ -415,7 +415,7 @@
 				<div class="col-lg-3 col-md-6 col-xs-12">
 					<div class="single-team wow fadeInUp" data-wow-delay="0.4s">
 						<div class="team-thumb">
-							<img style="height: 255px;" src="img/team/fajar.jpg" alt="">
+							<img src="img/team/AJX03936.png" alt="">
 							<ul class="social-list">
 								<li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
 								<li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
@@ -591,19 +591,19 @@
 			<!-- Row and Scroller Wrapper Starts -->
 			<div class="row" id="clients-scroller">
 				<div class="client-item-wrapper">
-					<img src="img/clients/img1.png" alt="">
+					<img src="img/clients/ibtlogo.png" alt="">
 				</div>
 				<div class="client-item-wrapper">
-					<img src="img/clients/img2.png" alt="">
+					<img src="img/clients/startupindo.png" alt="">
 				</div>
 				<div class="client-item-wrapper">
-					<img src="img/clients/img3.png" alt="">
+					<img src="img/clients/alfamart.png" alt="">
 				</div>
 				<div class="client-item-wrapper">
-					<img src="img/clients/img4.png" alt="">
+					<img src="img/clients/pitch.png" alt="">
 				</div>
 				<div class="client-item-wrapper">
-					<img src="img/clients/img5.png" alt="">
+					<img src="img/clients/indomaret.png" alt="">
 				</div>
 			</div>
 		</div>
