--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-3 col-md-6 col-xs-12">
+				<!-- <div class="col-lg-3 col-md-6 col-xs-12">
 					<div class="single-team wow fadeInUp" data-wow-delay="0.2s">
 
 						<div class="team-thumb">
@@ -387,7 +387,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<div class="col-lg-3 col-md-6 col-xs-12">
 					<div class="single-team wow fadeInUp" data-wow-delay="0.3s">
