--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 					<div class="single-team wow fadeInUp" data-wow-delay="0.2s">
 
 						<div class="team-thumb">
-							<img src="img/team/mardiyanto.jpg" alt="">
+							<img src="img/team/test.png" alt="">
 							<ul class="social-list">
 								<li class="facebook"><a href="#"><i class="lni-facebook-filled"></i></a></li>
 								<li class="twitter"><a href="#"><i class="lni-twitter-filled"></i></a></li>
