tambah file owl.js

--- a/index.html
+++ b/index.html
@@ -931,6 +931,7 @@
 	<script src="js/popper.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/owl.carousel.js"></script>
+	<script src="css/OwlCarousel2-2.3.4/dist/owl.carousel.js"></script>
 	<script src="js/jquery.mixitup.js"></script>
 	<script src="js/jquery.nav.js"></script>
 	<script src="js/scrolling-nav.js"></script>
