--- a/index.html
+++ b/index.html
@@ -585,11 +585,11 @@
 	<!-- Testimonial Section End -->
 
 	<!-- Clients Section -->
-	<div id="clients" class="section">
-		<!-- Container Ends -->
-		<div class="container">
-			<!-- Row and Scroller Wrapper Starts -->
-			<div class="row" id="clients-scroller">
+	<!-- <div id="clients" class="section"> -->
+	<!-- Container Ends -->
+	<!-- <div class="container"> -->
+	<!-- Row and Scroller Wrapper Starts -->
+	<!-- <div class="row" id="clients-scroller">
 				<div class="client-item-wrapper">
 					<img src="img/clients/ibtlogo.png" alt="">
 				</div>
@@ -607,7 +607,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- Client Section End -->
 
 	<!-- Subcribe Section Start -->
